# cpp-covid-game

./: .gitignore  CMakeLists.txt  README.md
src/: game_configuration.h  main.cpp
src/entity/: entity.cpp  entity.h
src/player/: player.cpp  player.h
src/utilities/: utilities.cpp  utilities.h
src/vector2/: vector2.cpp  vector2.h
